# jobrunner

./: .editorconfig  .gitignore  .isort.cfg  .travis.yml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NEW_DATABASE_SUMMARY.md  Pipfile  README.md  README.rst  RELATIONAL_DB.md  azure-pipelines-native.yaml  azure-pipelines.yml  benchmark_db.py  cover.sh  format.sh  job  lint  maketags  pylintrc  pyproject.toml  renovate.json  requirements.in  requirements.testing.in  requirements.txt  setup.cfg  setup.py  test-docker-helper.sh  test-docker.py  test-docker.sh  test.sh  testenv  tox.ini
.github/workflows/: check.yml  codeql-analysis.yml  python-package.yml  python-publish.yml
ci/: steps.yaml
ci/azure/: azure-pipelines.yaml  steps.yaml
jobrunner/: argparse.py  binutils.py  compat.py  config.py  db.py  info.py  logging.py  main.py  plugins.py  sequences.py  timing.py  utils.py
jobrunner/adapters/: __init__.py  job_converter.py
jobrunner/db/: __init__.py  dbm_db.py  relational_db.py  repository_adapter.py  sqlite_db.py
jobrunner/domain/: __init__.py  job.py
jobrunner/mail/: chat.py
jobrunner/plugin/: a4c_workspace.py  resourced.py
jobrunner/repository/: __init__.py  interface.py  sqlite_repository.py
jobrunner/service/: __init__.py  registry.py
jobrunner/service_layer/: __init__.py  job_service.py
jobrunner/test/: argparse_test.py  chatmail_test.py  config_test.py  db_database_test.py  db_sqlite_test.py  helpers.py  info_test.py  logging_test.py  main_test.py  plugin_test.py  relational_db_test.py  service_test.py  test_dep_tree.py  test_domain.py  test_repository.py  test_repository_adapter.py  test_service.py  utils_test.py
jobrunner/test/integration/: await_file.py  dump_json_input.py  integration_lib.py  interrupt_running_test.py  send_email.py  sequences_test.py  smoke_test.py
jobrunner_git/: project.py
templates/: steps.yaml
