[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "shell-jobrunner"
dynamic = ["version"]
description = "Shell-based job runner with logging"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
]
dependencies = [
    "chardet==6.0.0.post1",
    "dateutils==0.6.12",
    "requests==2.32.5",
    "six==1.17.0",
    "wrapt==2.1.1",
    "setuptools-scm==9.2.2",
    "importlib-metadata==8.7.1; python_version<'3.10'",
]

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "mock==5.2.0",
    "pexpect==4.9.0",
    "pytest==8.4.2",
    "pytest-retry==1.7.0",
    "dill==0.4.1",
]

[project.urls]
Homepage = "https://github.com/wwade/jobrunner"
Repository = "https://github.com/wwade/jobrunner"

[project.scripts]
job = "jobrunner.main:main"
chatmail = "jobrunner.mail.chat:main"

[tool.poetry]
packages = [{include = "jobrunner"}]
version = "0.0.0"  # Dynamic from setuptools-scm

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.setuptools_scm]
# Enable setuptools-scm for dynamic versioning

[tool.ruff]
line-length = 85
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "PL",   # pylint
]
ignore = [
    "PLR0913",  # too-many-arguments
    "PLR2004",  # magic-value-comparison
    "PLW0603",  # global-statement
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR0911",  # too-many-return-statements
    "PLW2901",  # redefined-loop-name
]

[tool.ruff.lint.isort]
# Group imports by module name, not by import type (import vs from)
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"jobrunner/compat.py" = ["E", "W", "F"]  # Exempt compat.py like before

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["jobrunner"]
