[metadata]
name = shell-jobrunner
version = 2.3.1
description = Shell-based job runner with logging
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/wwade/jobrunner
project_urls =
    Source = https://github.com/wwade/jobrunner
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Terminals
    Topic :: System :: Shells

[options]
python_requires = >= 2.7
install_requires=
    chardet
    dateutils
    importlib-metadata
    requests < 2.26.0
    simplejson < 3.18.0
    six
packages = find:

[options.packages.find]
exclude = jobrunner.test*

[options.entry_points]
console_scripts =
    job = jobrunner.main:main
    chatmail = jobrunner.mail.chat:main

[pycodestyle]
max-line-length = 85
