[metadata]
name = jobrunner-git
description = shell-jobrunner plugin to provide "project plugin" context from git repos
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/wwade/jobrunner-git
project_urls =
    Source = https://github.com/wwade/jobrunner-git
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Topic :: Terminals
    Topic :: System :: Shells

[options]
python_requires = >= 3.7
setup_requires = setuptools_scm
install_requires =
    importlib-metadata
packages = jobrunner_git

[options.entry_points]
wwade.jobrunner =
    jobrunner_git_project = jobrunner_git.project
